--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,15 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-        name="description"
-        content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Quanvest</title>
 </head>
 
 <body>
